Complete but the Settings is not implemented.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,7 +216,7 @@
         Low:<xliff:g id="low">%3$s</xliff:g>
     </string>
 
-
+    <string name="wind_label">Wind</string>
     <!-- - - - - - - - - - - -->
     <!-- Used by NetworkUtils-->
     <!-- - - - - - - - - - - -->
